# ai-agent-starter-kit

./: .gitignore  AGENT-QUALITY-PLAN.md  ARCHITECTURE.md  ARCHITECTURE_REASSESSMENT_2026-03-01.md  ARCHITECTURE_REPORT.md  AgentRunnerRefactoring.md  CLEANUP-LEGACY-REMNANTS.md  CLEANUP.md  DDD_STRUCTURE_PLAN.md  DEBUG-FEATURE-ROADMAP-1.md  DEBUG-FEATURE-ROADMAP-2.md  FIXROADTOGOLD.md  FRONTEND-DEBUG-FEATURE.md  HANDOUT_MARKETING.txt  MASTERPLAN.md  MAX_IMPACT_REFACTORING_PLAN.md  NEEDEDFEATURES.md  OPENAGENT_EXECUTIVE_SUMMARY_1PAGE.md  OPENAGENT_PROMPT_LIFECYCLE_CROSSREF.md  OPENAGENT_VERIFICATION_EVIDENCE.txt  OPENCLAW_DEEP_DIFF_HANDOVER.md  QUALITY_ASSESSMENT_BACKEND_PROMPT.md  README.md  REASONING-PIPELINE.md  REFACTORING.md  REFACTORINGPLAN.md  REMOVE-LEGACY-PIPELINE.md  ROADTOTOOLGOLD.md  SECURITYAUDIT.md  SECURITYPATCH.md  SECURITYPATCHBUGREPORT.md  SECURITY_FIXPLAN.md  SPRINT-1-AGENTRUNNER.md  SPRINT-1-PLAN.md  SPRINT-2-AGENTRUNNER.md  SPRINT-3-AGENTRUNNER.md  SPRINT-4-AGENTRUNNER.md  clean-dev.ps1  clean-dev.sh  diagnose.ps1  (+16 more)
backend/: .env.example  BENCHMARK_STRATEGY.md  BUGREPORT.md  CRITICAL_AUDIT_IMPLEMENTATION_PLAN_2026-03-02.md  HEAD_AGENT_IMPLEMENTATION_PLAN_2026-03-03.md  HEAD_AGENT_OPENAGENT_PARITY_MASTERPLAN_2026-03-03.md  HEAD_AGENT_TICKET_SPECS_2026-03-03.md  INTELLIGENCE_LAYER_REFACTORING_PLAN.md  OPENCLAW_ADOPTION_PLAN.md  OPENCLAW_PARITY_TRACKER.md  QUALITY_ASSESSMENT_2026-03-01.md  QUALITY_REFACTORING_PLAN.md  README.md  RECOVERY_RUNBOOK.md  REFACTORING_PLAN.md  REFRACTORING_PLAN.md  SESSION_HANDOFF_2026-03-02.md  SESSION_TASKBOARD_2026-03-02.md  SKILLS_REFACTORING_PLAN.md  SMOKE_RUNBOOK.md  TEST_BASELINE.md  architecture.md  calculator.html  config_overrides.json  ecommerce_agent_design.md  index.html  install_pytest.py  package-lock.json  package.json  pyproject.toml  pythagorean_triplet.py  recipe_store.sqlite3  recipe_store.sqlite3-shm  recipe_store.sqlite3-wal  report.md  requirements-test.txt  requirements.txt  script.js  styles.css  v3-assessment-results.txt  (+3 more)
backend/agents/: architect-agent.json  content-creation-pipeline.json  ecommerce-agent.json  head-agent.json  healthtech-agent.json  refactor-agent.json  researcher-agent.json  review-agent.json  test-agent.json  ws-test-agent-0d623a.json  ws-test-agent-13a09a.json  ws-test-agent-197a1d.json  ws-test-agent-1c252f.json  ws-test-agent-51baeb.json  ws-test-agent-520fa7.json  ws-test-agent-5ab7c4.json  ws-test-agent-7ca937.json  ws-test-agent-8a5cc3.json  ws-test-agent-8ba7df.json  ws-test-agent-974fd0.json  ws-test-agent-996618.json  ws-test-agent-aeb34a.json  ws-test-agent-b1d680.json  ws-test-agent-b621ad.json  ws-test-agent-c384f5.json  ws-test-agent-d80519.json  ws-test-agent-e252fb.json  ws-test-agent-e7aa14.json  ws-test-agent-f5172f.json  ws-test-agent-f6b363.json  ws-test-agent-fe8b1b.json
backend/app/: agent.py  agent_runner.py  agent_runner_types.py  app_setup.py  app_state.py  config.py  config_sections.py  config_service.py  content_security.py  control_models.py  control_router_wiring.py  custom_agents.py  errors.py  llm_client.py  main.py  mcp_types.py  memory.py  models.py  policy_store.py  run_endpoints.py  runtime_debug_endpoints.py  runtime_manager.py  startup_tasks.py  subrun_endpoints.py  tool_catalog.py  tool_policy.py  tooling.py  tools.py  tools_api_connectors.py  tools_devops.py  tools_multimodal.py  tools_workflow.py  url_validator.py  ws_handler.py
backend/benchmarks/: run_benchmark.py
backend/config/: models.json  routing_rules.json
backend/copilot_dump/: dump_1.md  dump_2.md  dump_3.md
backend/custom_agents/: config-summary-agent.json  custom-agent-test.json  list-workflows.json  workflow-create-1c433964.json  workflow-delete-81ea91cd.json  workflow-delete-d22e770e.json  workflow-delete-idemp-6268f65e.json  workflow-execute-0b42333b.json  workflow-execute-bfcc741e.json  workflow-execute-idemp-623617f5.json  workflow-get-4ef3e095.json  workflow-get-c0759c7a.json  workflow-update-1f15668a.json  workflow-update-idemp-5245c7f3.json
backend/docker/: Dockerfile.backend  Dockerfile.user-template  orchestrator.py  startup.sh
backend/frontend/: package.json
backend/jacobian_conjecture_presentation/: presentation.md
backend/monitoring/: HISTORICAL_ARTIFACTS.md  RECOVERY_ALERT_PROFILES.md  RECOVERY_TELEMETRY_MAPPING.md  eval_golden_suite.json  ws_orchestration_monitor_20260301-211350.json
backend/scripts/: check_coverage_thresholds.py  cleanup_agent.py  diagnose.py  features.txt  generate_speech.py  generate_tone.py  run_eval_gates.py  scenarios-v2.json  scenarios-v3.json  scenarios-v4.json  scenarios.json
backend/tests/: async_test_guards.py  conftest.py  mock_contract_guards.py  test_action_augmenter.py  test_action_parser.py  test_adaptive_tool_selector.py  test_agent_config_store.py  test_agent_resolution_capability_routing.py  test_agent_runner.py  test_agent_runner_evidence_gates.py  test_backend_e2e.py  (+142 more)
(+713 files in other folders)
